# sem

./: .gitignore  package.json
crates/: Cargo.toml  README.md  README.zh-CN.md  SKILL.md
crates/sem-cli/: Cargo.toml
crates/sem-cli/src/: cache.rs  main.rs  stats.rs
crates/sem-cli/src/commands/: context.rs  diff.rs  entities.rs  entity_diff.rs  impact.rs  log.rs  mod.rs  stats.rs
crates/sem-cli/src/formatters/: markdown.rs  plain.rs  terminal.rs
crates/sem-core/: Cargo.toml
crates/sem-core/src/git/: bridge.rs  mod.rs
crates/sem-core/src/model/: change.rs  entity.rs  identity.rs
crates/sem-core/src/parser/: differ.rs  graph.rs  mod.rs  registry.rs  scope_resolve.rs
crates/sem-core/src/parser/plugins/: csv_plugin.rs  erb.rs  fallback.rs  json.rs  markdown.rs  mod.rs  svelte.rs  toml_plugin.rs  vue.rs  yaml.rs
crates/sem-core/src/parser/plugins/code/: entity_extractor.rs  languages.rs  mod.rs
crates/sem-mcp/: Cargo.toml
crates/sem-mcp/src/: cache.rs  server.rs
crates/sem-plugin/: Cargo.toml  manifest.json
crates/sem-plugin/test-harness/: Cargo.toml
crates/sem-plugin/test-harness/src/: main.rs
crates/sem-plugin/wit/: lix-plugin.wit
scripts/: verify-checksum.mjs  verify-checksum.test.mjs
